Change Perfil Photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,10 +33,16 @@
         <item>USER</item>
     </string-array>
 
-    <string-array name="admin_roles">git 
+    <string-array name="admin_roles">git
         <item>MOD</item>
         <item>USER</item>
     </string-array>
     <string name="title_activity_add_place">AddPlaceActivity</string>
+    <string name="title_activity_perfil_photo">PerfilPhotoActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 
 </resources>
